--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "nuxt": "3.0.0-rc.11"
+    "autoprefixer": "^10.4.12",
+    "nuxt": "3.0.0-rc.11",
+    "postcss": "^8.4.16",
+    "tailwindcss": "^3.1.8"
+  },
+  "dependencies": {
+    "@nuxtjs/tailwindcss": "^5.3.3"
   }
 }
