--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "tailwindcss": "^3.1.8"
   },
   "dependencies": {
-    "@nuxtjs/tailwindcss": "^5.3.3"
+    "@nuxtjs/tailwindcss": "^5.3.3",
+    "sass": "^1.55.0"
   }
 }
